syntax = "proto3";
package graft.common.v1;

import "google/protobuf/timestamp.proto";

message SegmentInfo {
  bytes sid = 1;
  bytes offsets = 2;
}

// A snapshot contains the metadata of a volume at a given LSN.
message Snapshot {
  bytes vid = 1;
  uint64 lsn = 2;
  uint64 checkpoint_lsn = 3;
  uint32 last_offset = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message Commit {
  Snapshot snapshot = 1;
  repeated SegmentInfo segments = 2;
}

message LsnBound {
  oneof bound {
    uint64 included = 1;
    uint64 excluded = 2;
  }
}

message LsnRange {
  LsnBound start = 1;
  LsnBound end = 2;
}
